Added width and height value for every image

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <ul class="testimonial__list">
           <li class="testimonial__item">
             <figure class="testimonial__person">
-              <img src="./images/image-colton.jpg" alt="Colton Smith" class="testimonial__photo" width="" height="">
+              <img src="./images/image-colton.jpg" alt="Colton Smith" class="testimonial__photo" width="48" height="48">
               <figcaption class="testimonial__figcaption">
                 <p class="testimonial__name">Colton Smith</p>
                 <p class="testimonial__status"><em class="testimonial__verified">Verified Buyer</em></p>
@@ -168,7 +168,7 @@
           </li>
           <li class="testimonial__item">
             <figure class="testimonial__person">
-              <img src="./images/image-irene.jpg" alt="Irene Roberts" class="testimonial__photo" width="" height="">
+              <img src="./images/image-irene.jpg" alt="Irene Roberts" class="testimonial__photo" width="48" height="48">
               <figcaption class="testimonial__figcaption">
                 <p class="testimonial__name">Irene Roberts</p>
                 <p class="testimonial__status"><em class="testimonial__verified">Verified Buyer</em></p>
@@ -181,7 +181,7 @@
           </li>
           <li class="testimonial__item">
             <figure class="testimonial__person">
-              <img src="./images/image-anne.jpg" alt="Anne Wallace" class="testimonial__photo" width="" height="">
+              <img src="./images/image-anne.jpg" alt="Anne Wallace" class="testimonial__photo" width="48" height="48">
               <figcaption class="testimonial__figcaption">
                 <p class="testimonial__name">Anne Wallace</p>
                 <p class="testimonial__status"><em class="testimonial__verified">Verified Buyer</em></p>
