--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       content="/favicons/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
-    <!-- Current CSS -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- Minified CSS -->
+    <link rel="stylesheet" href="./css/style.min.css" />
     <title>Vanza Setia | Social Proof Section</title>
   </head>
   <body dir="ltr">
@@ -313,8 +313,8 @@
               </figure>
               <blockquote class="testimonial__quote">
                 "Customer service is always excellent and very quick
-                turn around. Completely delighted with the simplicity of
-                the purchase and the speed of delivery."
+                turn around. Completely delighted with the simplicity
+                of the purchase and the speed of delivery."
               </blockquote>
             </li>
             <li class="testimonial__item">
@@ -336,9 +336,9 @@
                 </figcaption>
               </figure>
               <blockquote class="testimonial__quote">
-                "Put an order with this company and can only praise them
-                for the very high standard. Will definitely use them
-                again and recommend them to everyone!"
+                "Put an order with this company and can only praise
+                them for the very high standard. Will definitely use
+                them again and recommend them to everyone!"
               </blockquote>
             </li>
           </ul>
