--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Prevent Google From Showing Search Box -->
     <meta name="google" content="nositelinkssearchbox" />
+    <!-- Google Verification -->
+    <meta name="google-site-verification" content="XChC6EHVnrq6RuZ37J4XYLzh1zEMfIjRvtPLQMbuElU" />
     <!-- Preload Font Family To Prevent Shifting Layout -->
     <link
       rel="preload"
